--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <section>
             <div>
-                <img src="./molengeek.png" alt="">
+                <img src="./img/logo.jpg" alt="">
             </div>
             <div>
                 <ul>
@@ -66,5 +66,15 @@
             <p>Enfin l'espace de coworking MolenGeek va jouer un rôle de tremplin vers les autres organisations et institutions qui soutiennent l'entrepreneuriat et aident les entrepreneurs. Force est de constater qu'aujourd'hui un grand nombre de participants ne se reconnaissent pas ou ne s'identifient pas dans les organisations en place, à cause du jargon employé, de l'atmosphère très entrepreneuriale ou encore par l'utilisation de nouvelles techniques de travail.  </p>
         </div>
     </section>
+    <footer>
+        <div>
+            <div><a href="">Facebook</a></div>
+            <div><a href="">Twitter</a></div>
+            <div><a href="">Instagram</a></div>
+        </div>
+        <hr>
+        <div><img src="./img/logo.jpg" alt=""></div>
+        <div><p>Copyright 2018. Coworking Co</p></div>
+    </footer>
 </body>
 </html>
