--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         <div class="footerRSL">
             <div>
                 <i class="fa-brands fa-facebook"></i>
-                <a class="footerRSL" href="">Facebook</a>
+                <a class="footerRSL" href="https://www.facebook.com/">Facebook</a>
             </div>
             <div>
                 <i class="fa-brands fa-twitter"></i>
-                <a class="footerRSL" href="">Twitter</a>
+                <a class="footerRSL" href="https://x.com/home">Twitter</a>
             </div>
             <div>
                 <i class="fa-brands fa-square-instagram"></i>
-                <a class="footerRSL" href="">Instagram</a>
+                <a class="footerRSL" href="https://www.instagram.com/">Instagram</a>
             </div>
         </div>
         <hr class="hr2">
