--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <div><img class="imgH" src="./img/many_contact_logo.png" alt="">
+        <div >
+            <img class="rect imgH" src="./img/many_contact_logo.png" alt="">
         </div>
         <div>
             <form class="form">
@@ -27,8 +28,8 @@
             </div>
             <div class="liste">
                 
-                    <p><a class="textN" href="">ACCUEIL</a></p>
-                    <p><a class="textN" href="">A PROPOS</a></p>
+                    <p><a class="textN" href=""><b>ACCUEIL</b></a></p>
+                    <p><a class="before textN" href="">A PROPOS</a></p>
                     <p><a class="textN" href="">COWORKING</a></p>
                     <p><a class="textN" href="">CODING SCHOOL</a></p>
                     <p><a class="textN" href="">AGENDA</a></p>
