--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img class="footerlogo" src="./img/logo-2.png" alt="">
         </div>
         <div class="divCR">
-            <p class="Copyright">Copyright 2018. Coworking Co</p>
+            <p class="Copyright">Copyright &copy; 2018. Coworking Co</p>
         </div>
     </footer>
 
